--- a/Mission4/Views/Home/MovieForm.cshtml
+++ b/Mission4/Views/Home/MovieForm.cshtml
@@ -9,7 +9,7 @@
 
 <h1>Submit a movie entry here:</h1>
 <div>
-    <form>
+    <form method="post">
         <label asp-for="Category">Category: </label>
         <input asp-for="Category" /> </br>
 
