up to video 5 in the second half

--- a/Mission4/Views/Home/Index.cshtml
+++ b/Mission4/Views/Home/Index.cshtml
@@ -4,4 +4,8 @@
 
 <h1>The Joel Hilton Film Collection</h1>
 
-<img src="~/img/JoelHiltonHeadshot.jpg" />
+<img src="~/img/JoelHiltonHeadshot.jpg" /><br />
+
+<div>
+    <a asp-action="MovieList">View Movie List</a>
+</div>
