--- a/Mission4/Views/Shared/_Layout.cshtml
+++ b/Mission4/Views/Shared/_Layout.cshtml
@@ -55,8 +55,8 @@
     <meta name="viewport" content="width=device-width" />
     <meta charset="utf-8" />
     <title>@ViewData["Title"]</title>
-    @*<link href="~/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-        <link href="~/css/default.css" rel="stylesheet" />*@
+    <link href="~/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
+    @*<link href="~/css/default.css" rel="stylesheet" />*@
 </head>
 <body>
     <nav>
@@ -68,8 +68,8 @@
         @RenderBody()
     </div>
 
-    @*<script src="~/lib/bootstrap/js/bootstrap.min.js"></script>
-        <script src="~/lib/jquery/jquery-3.6.0.min.js"></script>*@
+    <script src="~/lib/bootstrap/js/bootstrap.min.js"></script>
+    <script src="~/lib/jquery/jquery-3.6.0.min.js"></script>
 </body>
 
 </html>
