--- a/Mission4/Views/Home/MovieList.cshtml
+++ b/Mission4/Views/Home/MovieList.cshtml
@@ -34,7 +34,7 @@
                     <td>@x.LentTo</td>
                     <td>@x.Notes</td>
 
-                    <td><a asp-controller="Home" asp-action="Edit" asp-route-applicationid="@x.MovieID">Edit</a></td>
+                    <td><a asp-controller="Home" asp-action="Edit" asp-route-movieid="@x.MovieID">Edit</a></td>
                     <td><a asp-controller="Home" asp-action="Delete" asp-route-applicationid="@x.MovieID">Delete</a></td>
                 </tr>
             }
